Reduced the screen width threshold before nav bar collapses. Added iOS fix to not use registration modal when clicking on any register buttons. Incremented the CSS and JS version numbers

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2482,7 +2482,7 @@ a.sales-vault-twitter-link:hover {
         margin-top: 50px;
     }
 }
-@media only screen and (max-width: 1345px) {
+@media only screen and (max-width: 1100px) {
     .nav-custom-desktop { display: none; }
     nav .brand-logo.custom-brand-logo { left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); }
     nav a.button-collapse.button-collapse-custom { display: inherit; }
